# semantic-code-mcp

./: .env.example  .gitignore  LICENSE  README.md  chunker.py  embedder.py  eval_golden.py  indexer.py  pyproject.toml  requirements.txt  retriever.py  server.py  store.py  test_basic.py  test_e2e.py  test_features.py  test_fixes.py  test_pipeline.py  test_quant.py  watcher.py  workspace.py
.github/workflows/: ci.yml  release.yml
npm/: README.md  bin.js  package.json
src/semantic_code_mcp/: __init__.py  chunker.py  embedder.py  expander.py  indexer.py  retriever.py  server.py  store.py  watcher.py  workspace.py
