[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-code-mcp"
version = "0.1.0"
description = "Semantic code search MCP server: Tree-sitter AST chunking + voyage-code-3 embeddings + hybrid retrieval (sqlite-vec + FTS5 + RRF) + Voyage rerank-2.5 + call graph expansion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "huawang1258" }]
keywords = ["mcp", "semantic-search", "code-search", "rag", "tree-sitter", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "mcp>=1.2.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-bash>=0.23.0",
    "sqlite-vec>=0.1.6",
    "voyageai>=0.3.0",
    "cohere>=5.13.0",
    "watchdog>=4.0.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "pathspec>=0.12.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
local = ["sentence-transformers>=3.0.0"]

[project.urls]
Homepage = "https://github.com/huawang1258/semantic-code-mcp"
Repository = "https://github.com/huawang1258/semantic-code-mcp"
Issues = "https://github.com/huawang1258/semantic-code-mcp/issues"

[project.scripts]
semantic-code-mcp = "semantic_code_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_code_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", ".env.example"]
